--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "node",
   "version": "1.0.0",
+  "type": "module",
   "main": "script.js",
   "scripts": {
     "start": "nodemon server.js"
